[package]
name = "wormhole-core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.wormhole-core]
path = ".."

# Create isolated workspace.
[workspace]
members = ["."]

[[bin]]
name = "vaa"
path = "fuzzer_targets/vaa.rs"